--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,12 +5,17 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" type="image/svg+xml" href="/favicon.svg" />
+		<link rel="icon" href="data:image/svg+xml,<svg xmlns=%22http://www.w3.org/2000/svg%22 viewBox=%220 0 100 100%22><text x=%2250%%22 y=%2250%%22 style=%22dominant-baseline:central;text-anchor:middle;font-size:90px;%22>💻</text></svg>">
 		<meta name="viewport" content="width=device-width" />
 		<meta name="generator" content={Astro.generator} />
-		<title>Astro</title>
+		<title>miyamo.me</title>
 	</head>
 	<body>
-		<h1>Astro</h1>
+		<h1>miyamo</h1>
+		<p>Software engineer at an online game company.</p>
+		<ul>
+			<li><a href="https://twitter.com/miyamo_ys">Twitter</a></li>
+			<li><a href="https://github.com/miyamoy">GitHub</a></li>
+		</ul>
 	</body>
 </html>
