fix and add sns links

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -13,9 +13,12 @@
 	<body>
 		<h1>miyamo</h1>
 		<p>Software engineer at an online game company.</p>
-		<ul>
-			<li><a href="https://twitter.com/miyamo_ys">Twitter</a></li>
+		<ul>	
 			<li><a href="https://github.com/miyamoy">GitHub</a></li>
+			<li><a href="https://twitter.com/miyamo_ys">X(Twitter)</a></li>
+			<li><a href="https://bsky.app/profile/miyamo.me">Bluesky</a></li>
+			<li><a href="https://www.instagram.com/miyamo.y/">Instagram</a></li>
+			<li><a href="https://www.threads.net/@miyamo.y">Threads</a></li>
 		</ul>
 	</body>
 </html>
