--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@
 	</head>
 	<body>
 		<h1>miyamo</h1>
-		<p>Software engineer at an online game company.</p>
+		<p>Software engineer at a game company.</p>
 		<ul>	
 			<li><a href="https://github.com/miyamoy">GitHub</a></li>
 			<li><a href="https://twitter.com/miyamo_ys">X(Twitter)</a></li>
