add blog posts logic

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,6 +19,7 @@
 			<li><a href="https://bsky.app/profile/miyamo.me">Bluesky</a></li>
 			<li><a href="https://www.instagram.com/miyamo.y/">Instagram</a></li>
 			<li><a href="https://www.threads.net/@miyamo.y">Threads</a></li>
+			<li><a href="./blog">Blog</a></li>
 		</ul>
 	</body>
 </html>
