--- a/src/pages/blog.astro
+++ b/src/pages/blog.astro
@@ -5,11 +5,6 @@ const posts = await Astro.glob("./posts/*.md");
 <html>
     <head></head>
     <body>
-        <h1>Posts</h1>
-        <div>
-            <ul>
-                {posts.map((post) => <li><a href={post.url}>{post.frontmatter.title}</a></li>)}
-            </ul>
-        </div>
+        <h1>coming soon...</h1>
     </body>
 </html>
