--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -11,7 +11,7 @@ const url = new URL(Astro.request.url);
             class="inline-flex items-center grayscale hover:filter-none sm:relative sm:inline-block"
             aria-current={url.pathname === "/" ? "page" : false}
         >
-            <span class="text-xl font-bold sm:text-2xl">miyamo</span>
+            <span class="text-xl font-bold sm:text-2xl">miyamo.me</span>
         </a>
         <nav
             id="navigation-menu"
