--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,7 +9,7 @@ const allPosts = await getCollection("post");
 
 <PageLayout siteMeta={{ title: "Home" }}>
 	<section>
-		<h1 class="title mb-6">miyamo.me</h1>
+		<h1 class="title mb-6">miyamo</h1>
 		<p class="mb-4">Software engineer at a game company</p>
 	</section>
 	<section aria-label="Social link list" class="mt-16">
