--- a/src/pages/posts/[slug].astro
+++ b/src/pages/posts/[slug].astro
@@ -1,7 +1,7 @@
 ---
 import { getCollection } from "astro:content";
 
-import PageLayout from "@/layouts/Base.astro";
+import PostLayout from "@/layouts/BlogPost.astro"
 
 export async function getStaticPaths() {
     const blogEntries = await getCollection("post");
@@ -14,6 +14,7 @@ export async function getStaticPaths() {
 const { entry } = Astro.props;
 const { Content } = await entry.render();
 ---
-<PageLayout siteMeta={{ title: "Draft" }}>
+
+<PostLayout post={entry} >
     <Content />
-</PageLayout>
+</PostLayout>
