Tailwind CSS のユーティリティクラス記述を削除

--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -21,11 +21,9 @@ const articleDate = updateDate?.toISOString() ?? publishDate.toISOString();
 ---
 
 <BaseLayout siteMeta={{ articleDate, description, ogImage: socialImage, title }}>
-    <div class="gap-x-10 lg:frex lg:items-start">
-        <article class="flex-grow break-words" data-pagefind-body>
-            <div
-                class="prose prose-sm prose-cactus mt-12 prose-headings:font-semibold prose-headings:text-accent-2 prose-headings:before:absolute prose-headings:before:-ms-4 prose-headings:before:text-accent prose-headings:before:content-['#'] prose-th:before:content-none"
-            >
+    <div>
+        <article data-pagefind-body>
+            <div>
                 <slot />
             </div>
         </article>
