--- a/src/components/layout/Header.astro
+++ b/src/components/layout/Header.astro
@@ -4,25 +4,22 @@ import { menuLinks } from "@/site-config";
 const url = new URL(Astro.request.url);
 ---
 
-<header id="main-header" class="group relative mb-28 flex items-center sm:ps-[4.5rem]">
-    <div class="flex sm:flex-col">
+<header id="main-header">
+    <div>
         <a
             href="/"
-            class="inline-flex items-center grayscale hover:filter-none sm:relative sm:inline-block"
             aria-current={url.pathname === "/" ? "page" : false}
         >
-            <span class="text-xl font-bold sm:text-2xl">miyamo.me</span>
+            <span>miyamo.me</span>
         </a>
         <nav
             id="navigation-menu"
-            class="absolute -inset-x-4 top-14 hidden flex-col items-end gap-y-4 rounded-md bg-bgColor/[.85] py-4 text-accent shadow backdrop-blur group-[.menu-open]:z-50 group-[.menu-open]:flex sm:static sm:z-auto sm:-ms-4 sm:mt-1 sm:flex sm:flex-row sm:items-center sm:divide-x sm:divide-dashed sm:divide-accent sm:rounded-none sm:bg-transparent sm:py-0 sm:shadow-none sm:backdrop-blur-none"
             aria-label="Main menu"
         >
             {
                 menuLinks.map((link) => {
                     <a
                         aria-current={url.pathname === link.path ? "page" : false}
-                        class="px-4 py-4 underline-offset-2 sm:py-0 sm:hover:underline"
                         data-astro-prefetch
                         href={link.path}
                     >
