リンクの生成を絶対パスに修正

--- a/src/pages/posts.astro
+++ b/src/pages/posts.astro
@@ -13,7 +13,7 @@ const allPosts = await getCollection("post");
         <ul>
         {
             allPosts.map((post) => (
-                <li><a href={`posts/${post.slug}/`}>{post.data.title}</a></li>
+                <li><a href={`/posts/${post.slug}/`}>{post.data.title}</a></li>
             ))
         }
         </ul>
