--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -2,20 +2,11 @@ body {
     background-color: whitesmoke;
 }
 
-header {
-  width: 100%;
-  max-width: 720px;
-  margin: auto;
-}
-
 main {
   width: 100%;
-  max-width: 720px;
-  margin: auto;
-}
-
-footer {
-  width: 100%;
-  max-width: 720px;
-  margin: auto;
+  max-width: 640px;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 50px;
+  margin-bottom: 50px;
 }
