--- a/src/components/layout/Header.module.css
+++ b/src/components/layout/Header.module.css
@@ -1,7 +1,7 @@
 .header {
   width: 100%;
   max-width: 640px;
-  margin: auto;
+  margin-inline: auto;
 }
 
 .div {
@@ -14,6 +14,11 @@
   color: black;
   font-size: medium;
   text-decoration: none;
+}
+
+.nav {
+  display: flex;
+  gap: 1rem;
 }
 
 .nav a {
