--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,12 +1,11 @@
 body {
     background-color: whitesmoke;
+    margin: 20px;
 }
 
 main {
   width: 100%;
   max-width: 640px;
-  margin-left: auto;
-  margin-right: auto;
-  margin-top: 50px;
-  margin-bottom: 50px;
+  margin-inline: auto;
+  margin-block: 50px;
 }
