--- a/src/styles/posts.module.css
+++ b/src/styles/posts.module.css
@@ -2,10 +2,10 @@
   margin-bottom: 1.5rem;
 }
 
-.p {
-  margin-bottom: 1rem;
+.section {
+  margin-top: 1rem;
 }
 
-.section {
+.ul {
   margin-top: 1rem;
 }
