--- a/src/layouts/BlogPost.astro
+++ b/src/layouts/BlogPost.astro
@@ -24,6 +24,7 @@ const articleDate = updateDate?.toISOString() ?? publishDate.toISOString();
     <div>
         <article>
             <div>
+                <h1>{title}</h1>
                 <slot />
             </div>
         </article>
