--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,7 +1,8 @@
 body {
     background-color: whitesmoke;
     margin: 20px;
-}
+    font-family: "Noto Sans JP", "Hiragino Kaku Gothic ProN", Meiryo, sans-serif
+  }
 
 main {
   width: 100%;
