投稿の日付追加

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -6,6 +6,7 @@ import styles from "../styles/index.module.css";
 import PageLayout from "@/layouts/PageLayout.astro";
 
 const allPosts = await getCollection("post");
+allPosts.sort((a, b) => new Date(b.data.publishDate).getTime() - new Date(a.data.publishDate).getTime());
 ---
 
 <PageLayout siteMeta={{ title: "Home" }}>
@@ -27,7 +28,12 @@ const allPosts = await getCollection("post");
 		<ul class={styles.ul}>
 		{
 			allPosts.map((post) => (
-				<li><a href={`posts/${post.slug}/`}>{post.data.title}</a></li>
+				<li class={styles.postItem}>
+          <time class={styles.time} datetime={post.data.publishDate.toISOString()}>
+            {new Date(post.data.publishDate).toLocaleDateString('ja-JP')}
+          </time>
+          <a class={styles.postLink} href={`posts/${post.slug}/`}>{post.data.title}</a>
+        </li>
 			))
 		}
 		</ul>
