自己紹介の修正

--- a/src/pages/about.astro
+++ b/src/pages/about.astro
@@ -6,7 +6,7 @@ import styles from '../styles/about.module.css';
 <PageLayoyt siteMeta={{ title: "About"}}>
   <section>
 		<h1 class={styles.h1}>miyamo</h1>
-		<p class={styles.p}>Software engineer at a game company</p>
+		<p class={styles.p}>Software engineer</p>
 	</section>
 	<section aria-label="Social link list" class={styles.section}>
 		<ul>	
