自己紹介の修正(トップページ)

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -12,7 +12,7 @@ allPosts.sort((a, b) => new Date(b.data.publishDate).getTime() - new Date(a.data
 <PageLayout siteMeta={{ title: "Home" }}>
 	<section>
 		<h1 class={styles.h1}>miyamo</h1>
-		<p class={styles.p}>Software engineer at a game company</p>
+		<p class={styles.p}>Software engineer</p>
 	</section>
 	<section aria-label="Social link list" class={styles.section}>
 		<ul>	
